[gd_scene load_steps=2 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.25, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "üèòÔ∏è New Quiz on the Block"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.75, 0.8, 1)
text = "Lerne und baue deine Stadt!"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ProfileInfoLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ü¶ä Spieler | 1. Klasse | 100 üéì"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚ñ∂Ô∏è  Spielen"

[node name="ProfilesButton" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üë§  Profile verwalten"

[node name="SettingsButton" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚öôÔ∏è  Einstellungen"

[node name="CreditsButton" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚ÑπÔ∏è  Credits"

[node name="QuitButton" type="Button" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üö™  Beenden"

[node name="VersionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -32.0
offset_right = 116.0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.5, 0.55, 1)
text = "v0.6.0"

